@@ -119,6 +119,7 @@
 .justify-center  { justify-content: center; }
 .justify-between { justify-content: space-between; }
 .justify-around  { justify-content: space-around; }
+.justify-evenly  { justify-content: space-evenly; }
 
 .span0 { flex: 0; }
 .span1 { flex: 1; }
