@@ -3,6 +3,7 @@
   * (type) .rlh root-line-height
   * (border) --border-width, --border-color update
   * (div) --div-width, --div-color
+  * (grid) .justify-evenly
 
 # 0.15.1 (2020-02-05)
 
